# anyverse

./: .envrc  .gitignore  .oxfmtrc.json  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  devenv.nix  eslint.config.js  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml  ci.yaml  formatting.yaml
assets/: main.css
scripts/: init.ts
src/: env.ts  main.rs  routeTree.gen.ts  router.tsx  style.css  styles.css
src/components/: Sidebar.tsx  mod.rs  navbar.rs  page.rs  under_construction.rs
src/integrations/tanstack-query/: devtools.tsx  root-provider.tsx
src/pages/: about.rs  anydraw.rs  anyfana.rs  anyicon.rs  bookmarks.rs  calendar.rs  finance_manager.rs  flash_card.rs  mod.rs  rss.rs  time_tracker.rs
src/routes/: __root.tsx  anyfana.tsx  anyicon.tsx  calendar.tsx  draw.tsx  exporter.tsx  finance.tsx  flashcard.tsx  index.tsx  rss.tsx  time.tsx  vital.tsx  watchdog.tsx
